NetBSD Problem Report #49884

From www@NetBSD.org  Fri May  8 15:56:40 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C9B47A654C
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  8 May 2015 15:56:40 +0000 (UTC)
Message-Id: <20150508155639.496CEA6552@mollari.NetBSD.org>
Date: Fri,  8 May 2015 15:56:39 +0000 (UTC)
From: m4j0rd0m0@gmail.com
Reply-To: m4j0rd0m0@gmail.com
To: gnats-bugs@NetBSD.org
Subject: fix VAX 4000/200 support
X-Send-Pr-Version: www-1.0

>Number:         49884
>Category:       port-vax
>Synopsis:       fix VAX 4000/200 support
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-vax-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri May 08 16:00:00 +0000 2015
>Closed-Date:    Sat May 09 13:50:45 +0000 2015
>Last-Modified:  Tue May 19 05:45:00 +0000 2015
>Originator:     Felix Deichmann
>Release:        7.0_BETA 201505080130Z and 6.1.5
>Organization:
>Environment:
vax 7.0_BETA 201505080130Z and 6.1.5
>Description:
!!! Provided fix is tested and works.
!!! Please pull-up to NetBSD 6 and 7.

1)
CPU print-out is incorrect (Rigel, should be SOC).

2)
Kernel panic when booting (vsbus, should be ibus).

NetBSD 7.0_BETA (GENERIC.201505080130Z)
VAX 4000/200
total memory = 32708 KB
avail memory = 27572 KB
kern.module.path=/stand/vax/7.0/modules
mainbus0 (root)
cpu0 at mainbus0: KA660, Rigel (ucode rev. 6), 2KB L1 cache, 128KB L2 cache
ze0 at mainbus0
ze0: hardware address 08:00:2b:xx:xx:xx
vsbus0 at mainbus0
r0=827f2400 r1=827f240f r2=00100400 r3=00000001 r4=803de648 r5=00100400 r6=81fea3c0 r7=81f84780
r8=800fc1ae r9=802e53b2 r10=00000000 r11=8024ed8b
ap=8038e5f8 fp=8038e5d4 sp=ffffffff pc=00000000
panic: SEGV in kernel mode: pc 0 addr 0
Stopped in pid 0.1 (system) at  netbsd:vpanic+0xce:     pushl   $
db> bt
panic: SEGV in kernel mode: pc 0 addr 0
Stack traceback :
0x8038e460: vpanic+0xce(0x80282bff,0x8038e500)
0x8038e480: snprintf+0x0(0x80282bff,0,0)
0x8038e4b4: trap+0x89d(0x8038e584)
0x8038e584: trap type=0x8 code=0x0 pc=0x0 psl=0x0
0x8038e550: 0(0x81f84c00,0x81f84780,0x8038e6b8)
0x8038e5d4: config_attach_loc+0xf8(0x81f84c00,0x802e4e80,0,0x8038e6b8,0x8000276e
)
0x8038e60c: config_found_sm_loc+0x3a(0x81f84c00,0,0,0x8038e6b8,0x8000276e,0)
0x8038e654: config_found+0x17(0x81f84c00,0x8038e6b8,0x8000276e)
0x8038e694: mainbus_attach+0x60(0,0x81f84c00,0)
0x8038e6d0: config_attach_loc+0xf8(0,0x802e4d60,0,0,0)
0x8038e708: config_rootfound+0x2c(0x8024ed69,0)
0x8038e750: cpu_configure+0x14(void)
0x8038e778: main+0x301(void)
0x8038e7a4: _start+0x263(0x4014a0)

NetBSD 6.1.5 (GENERIC)
VAX 4000/200
total memory = 32708 KB
avail memory = 28080 KB
mainbus0 (root)
cpu0 at mainbus0: KA660, Rigel (ucode rev. 6), 2KB L1 cache, 128KB L2 cache
ze0 at mainbus0
ze0: hardware address 08:00:2b:xx:xx:xx
vsbus0 at mainbus0
r0=827f2400 r1=00000001 r2=8035a24c r3=00100400 r4=00000001 r5=00000200 r6=81fd15a0 r7=800e3e16
r8=81fbd780 r9=81fbd780 r10=81fbdc00 r11=8030a28c
ap=8030a1c8 fp=8030a1a4 sp=ffffffff pc=00000000
panic: SEGV in kernel mode: pc 0 addr 0
Stopped in pid 0.1 (system) at  netbsd:panic+0x19:      nop
db> bt
panic: SEGV in kernel mode: pc 0 addr 0
Stack traceback :
0x8030a048: panic+0x19(0x80258caf,0,0)
0x8030a080: trap+0x8ef(0x8030a154)
0x8030a154: trap type=0x8 code=0x0 pc=0x0 psl=0x0
0x8030a120: 0(0x81fbdc00,0x81fbd780,0x8030a28c)
0x8030a1a4: config_attach_loc+0xfb(0x81fbdc00,0x8026935c,0,0x8030a28c,0x80002a96)
0x8030a1dc: config_found_sm_loc+0x3d(0x81fbdc00,0,0,0x8030a28c,0x80002a96,0)
0x8030a224: config_found+0x1b(0x81fbdc00,0x8030a28c,0x80002a96)
0x8030a268: mainbus_attach+0x5d(0,0x81fbdc00,0)
0x8030a2a4: config_attach_loc+0xfb(0,0x8026923c,0,0,0)
0x8030a2dc: config_attach+0x1a(0,0x8026923c,0,0)
0x8030a324: config_rootfound+0x2d(0x80225445,0)
0x8030a350: cpu_configure+0x14(void)
0x8030a37c: main+0x2a0(void)
0x8030a3a4: _start+0xfd(0x400924)
>How-To-Repeat:
Boot NetBSD on a VAX 4000/200 (e. g. newer versions, but bug might have been introduced years ago).
>Fix:
--- ka660.c.r1_10	2015-05-08 17:00:00.000000000 +0200
+++ ka660.c	2015-05-08 17:00:00.000000000 +0200
@@ -61,7 +61,7 @@
 static void ka660_attach_cpu(device_t);
 static int ka660_mchk(void *);

-static const char * const ka660_devs[] = { "cpu", "sgec", "vsbus", NULL };
+static const char * const ka660_devs[] = { "cpu", "sgec", "shac", "uba", NULL };

 /* 
  * Declaration of 660-specific calls.
@@ -92,7 +92,7 @@
 ka660_attach_cpu(device_t self)
 {
 	aprint_normal(
-	    ": %s, Rigel (ucode rev. %d), 2KB L1 cache, 128KB L2 cache\n",
+	    ": %s, SOC (ucode rev. %d), 6KB L1 cache\n",
 	    "KA660",
 	    vax_cpudata & 0377);
 }

>Release-Note:

>Audit-Trail:
From: "Anders Magnusson" <ragge@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49884 CVS commit: src/sys/arch/vax/vax
Date: Sat, 9 May 2015 13:43:45 +0000

 Module Name:	src
 Committed By:	ragge
 Date:		Sat May  9 13:43:45 UTC 2015

 Modified Files:
 	src/sys/arch/vax/vax: ka660.c

 Log Message:
 PR port-vax/49884
 Fixes bug introduced in earlier cleanup.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/sys/arch/vax/vax/ka660.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: ragge@NetBSD.org
State-Changed-When: Sat, 09 May 2015 13:50:45 +0000
State-Changed-Why:
Patch applied.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49884 CVS commit: [netbsd-7] src/sys/arch/vax/vax
Date: Wed, 13 May 2015 14:09:09 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed May 13 14:09:09 UTC 2015

 Modified Files:
 	src/sys/arch/vax/vax [netbsd-7]: ka660.c

 Log Message:
 Pull up following revision(s) (requested by ragge in ticket #757):
 	sys/arch/vax/vax/ka660.c: revision 1.11
 PR port-vax/49884
 Fixes bug introduced in earlier cleanup.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.10.34.1 src/sys/arch/vax/vax/ka660.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49884 CVS commit: [netbsd-6] src/sys/arch/vax/vax
Date: Tue, 19 May 2015 05:43:50 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue May 19 05:43:50 UTC 2015

 Modified Files:
 	src/sys/arch/vax/vax [netbsd-6]: ka660.c

 Log Message:
 Pull up following revision(s) (requested by ragge in ticket #1298):
 	sys/arch/vax/vax/ka660.c: revision 1.11
 PR port-vax/49884
 Fixes bug introduced in earlier cleanup.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.10.14.1 src/sys/arch/vax/vax/ka660.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.