Pull up following revision(s) (requested by ragge in ticket #757): 	sys/arch/vax/vax/ka660.c: revision 1.11 PR port-vax/49884 Fixes bug introduced in earlier cleanup.